--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ I made this little thing for you, as in its nothing brilliant, but i cant do any
 
                             All letters should be in lowercase.
                             There is no space or any other character in the password.
-                            The password is the first thing i ever said to you in bengali.
+                            The password is the first thing you ever asked me!
+                            Click submit after you are done!
                           <br><br>
                             PASSWORD FORMAT: canitakeyououtonadate
                             <br><br>
